# co2-calculator

./: .database.env.example  .eslintrc.js  .gitignore  .lighthouserc.json  .npmrc  .prettierignore  .stylelintrc.js  404.html  CHANGELOG.md  CI-TODO.md  CONTRIBUTING.md  CONTRIBUTING_complete.md  CONTRIBUTING_complete_clean.md  CONTRIBUTING_complete_clean_deep.md  CONTRIBUTING_complete_final.md  CONTRIBUTING_original.md  EPFL_SPEC.md  KickOFF.md  MISSING_POINT.md  Makefile  README.md  SOURCE_TRACKING_IMPLEMENTATION.md  SPEC.md  TECH_SPEC.md  cicd-workflows.html  docker-compose.yml  eslint.config.js  format-lint-check-flowchart.md  index.html  lefthook.yml  local-dev-wip.md  mkdocs.yml  npm-shrinkwrap.json  package-lock.json  package.json  pyproject.toml  requirements.txt  rfc-first-process.html  rfc-wip.md  sitemap.xml  (+1 more)
backend/: .env.example  .gitignore  01-overview.html  02-ARCHITECTURE.html  03-FILE_STRUCTURE.html  04-README.html  05-REQUEST_FLOW.html  ARCHITECTURE.md  Dockerfile  FILE_STRUCTURE.md  Makefile  README.md  REQUEST_FLOW.md  alembic.ini  api.html  architecture.html  check_enum.py  deploy.html  index.html  mypy.ini  plugins.html  pyproject.toml  testing.html  ty.toml
backend/alembic/: CUSTOM_DB_OBJECTS.md  README  env.py  indexes.py  script.py.mako
backend/api/: index.html
backend/app/: PATTERN_ASYNC.md  __init__.py  db.py  exchange_rates.py  generate_mermaid_erd.py  main.py  populate_fake_data.py  seed_emission_factors.py  seed_equipment.py  seed_headcount.py  seed_locations.py  seed_professional_travel.py  seed_travel_impact_factors.py
backend/architecture/: index.html
backend/deploy/: index.html
backend/plugins/: index.html
backend/scripts/: add_country_codes_to_train_csvs.py  audit_test_users.py  build_train_seed_from_trainline.py  manage_db.py  migrate_test_users.py
backend/testing/: index.html
backend/tests/: conftest.py  test_inventory_repo.py  test_inventory_schema.py  test_inventory_service.py  test_resource_service.py
docs/: Dockerfile  Makefile  cicd-workflows.md  gen_indexes.py  mkdocs.yml  pyproject.toml  requirements.txt  role-sync-architecture.md
docs/architecture/: 02-system-overview.md  05-environments.md  06-cicd-pipeline.md  07-global-conventions.md  08-tech-stack.md  09-component-breakdown.md  10-data-flow.md  11-deployment-topology.md  12-scalability.md  TODO.md  epfl-constraint.md  full-tech-stach.md  index.md  kickoff.md
docs/architecture-decision-records/: adr-001-fastapi-backend.md  adr-003-s3-storage.md
docs/backend/: api.md  architecture.md  index.md  permissions-system.md  testing.md
docs/code-review/: 1168-copilot-feedback-fix-enforce-version-and-security.md  1249-copilot-feedback-fix-1236-pipeline-correctness-observability-phase-1-5-concurrency-fixes-ux.md  1266-copilot-feedback-fix-1266-provider-scope-unit-sync-year-configuration.md  1297-review-feat-1043-wrong-order-of-subcategory.md  1308-review-feat-columnsize-support.md  1309-review-feat-charts-download-as-png.md  1315-review-feat-backoffice-pdf-exports.md  217-copilot-feedback-feat-openapi-typescript-poc-for-auto-generated-api-types-217.md  282-copilot-feedback-trips-map.md  310-batch-copilot-triage-summary.md  310-copilot-feedback-chore-310c-consolidate-install-plan-310b-indexes-into-shared-fixture.md  310-copilot-feedback-feat-310-chain-job-dedupconfig-emission-recalc-dedup-1064.md  310-copilot-feedback-feat-310-post-merge-fix-batch-11-prs-landed-3-critical-5-high-3-architecture-follow-ups.md  310-copilot-feedback-feat-310-stale-stats-health-endpoint-1063.md  310-copilot-feedback-feat-310-unified-pipelinestatestore-1062.md  310-copilot-feedback-feat-310c-add-get-sync-pipelines-id-endpoint.md  310-copilot-feedback-feat-310c-add-handler-registry-scaffolding.md  310-copilot-feedback-feat-310c-add-run-job-runner-chain-job-heartbeat-tier-2-pr-1.md  310-copilot-feedback-feat-310c-add-started-at-finished-at-observability-columns.md  310-copilot-feedback-feat-310c-register-emission-recalc-module-emission-recalc-unit-sync-handlers-tier-2-pr-2.md  310-copilot-feedback-feat-310c-runner-cutover-ingestion-handlers-endpoint-poller-dispatch-tier-2-pr-3.md  310-copilot-feedback-feat-310d-aggregation-handler-dedup-active-partial-unique-index.md  310-copilot-feedback-feat-310d-contextual-recalc-button-pipeline-diagnostic-tooltip.md  310-copilot-feedback-feat-310d-per-module-it-matrix-for-strategy-b-rematch-plan-doc-realignment.md  310-copilot-feedback-feat-310d-pipeline-sse-stream-endpoint-active-pipeline-repo-helper.md  310-copilot-feedback-fix-310-a11y-pipeline-diagnostic-accessible-on-focus-f-c1.md  310-copilot-feedback-fix-310-atomic-cas-on-finished-job-write-b-c1.md  310-copilot-feedback-fix-310-emission-recalc-chains-aggregation-on-warning-b-c2.md  310-copilot-feedback-fix-310-heartbeat-failure-aborts-handler-b-h3.md  310-copilot-feedback-fix-310-is-current-index-discriminates-job-type-claim-logging-m-h2-a-m1.md  310-copilot-feedback-fix-310-preserve-kg-co2eq-override-on-async-path-b-h1.md  310-copilot-feedback-fix-310-seed-provider-bypasses-bulk-path-pure-async-gate-b-h2.md  310-copilot-feedback-fix-310-sse-pool-disconnect-detection-tenant-scope-a-h1-h2-h3.md  310-copilot-feedback-fix-310a-poller-auto-recovers-stuck-running-jobs-kube-safety-net.md  310-copilot-feedback-fix-310c-gate-factors-stale-on-backoffice-data-management-view.md  310-copilot-feedback-perf-310d-batch-rematch-in-emissionrecalculationworkflow.md  310-copilot-feedback-refactor-310d-single-pass-partition-in-upsert-factors.md  310-overall-review.md  430-copilot-feedback-feat-translate-factors.md  458-copilot-feedback-feat-458-follow-up-restful-session-resource-bff-cookie-exchange.md  (+10 more)
docs/database/: data-flows.md  index.md  maintenance.md  schema.md
docs/frontend/: deploy.md  ui-system.md
docs/implementation-plans/: 171-travel-module.md  173-building-module.md  214-additional-data-charts.md  220-csv-upload-implementation-summary.md  220-db-upload-csv-improve-data-modifications.md  221-permisson-based-access-control.md  228-refactor-pagination-limit-filter.md  240-feat-elastic-search.md  (+91 more)
(+1522 files in other folders)
