[project]
name = "co2-calculator-backend"
version = "0.1.0"
description = ""
requires-python = ">=3.12,<3.13"
dependencies = [
    "itsdangerous==2.2.0",
    "aiosqlite>=0.21.0",                # fall back for when no external db is provided
    "fastapi[standard]==0.121.2",
    "starlette==0.49.3",
    "uvicorn[standard]==0.38.0",
    "python-multipart==0.0.20",
    "sqlalchemy[asyncio,mypy]==2.0.44",
    "psycopg[binary,pool]==3.2.12",
    "alembic==1.17.1",
    "authlib==1.6.5",
    # to remove once, we use entra or keycloak
    "passlib[bcrypt]==1.7.4",
    # "python-dotenv==1.0.0",
    "pydantic==2.12.3",
    "pydantic-settings==2.11.0",
    "email-validator==2.3.0",
    "httpx==0.28.1",
    # "python-dateutil==2.8.2",
    "joserfc>=1.4.0",
    "types-passlib>=1.7.7.20250602",
    "sqlmodel>=0.0.27",
    "enacit4r-files",
    "haversine==2.9.0",
    "requests>=2.32.4",
    "opentelemetry-distro>=0.60b1",
    "opentelemetry-exporter-otlp>=1.39.1",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests/"]
asyncio_mode = "auto"

env = [
    "DB_NAME=test_auth_db",
    "OAUTH_ISSUER_URL=http://fake-issuer",
    "OAUTH_CLIENT_ID=fake-client-id",
    "OAUTH_CLIENT_SECRET=fake-secret",
    "OAUTH_SCOPE=openid profile email",
    "FRONTEND_URL=http://test-frontend",
    "DEBUG=False",
]

filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"
fix = true
lint.select = ["E", "F", "I"] # errors, flake8, imports
exclude = ["migrations"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true

[dependency-groups]
dev = [
    "pytest>=8.4",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0",
    "pytest-benchmark>=5.1",
    "pytest-mock>=3.15",
    "mypy>=1.18",
    "ruff>=0.14",
    "httpx>=0.28",
    "mypy>=1.18.2",
    "locust>=2.42.2",
    "pytest-env>=1.2.0",
    "faker>=38.2.0",
    "types-requests>=2.32.4.20260107",
]

[tool.mypy]
plugins = ["pydantic.mypy"]


[tool.alembic]

# path to migration scripts.
# this is typically a path given in POSIX (e.g. forward slashes)
# format, relative to the token %(here)s which refers to the location of this
# ini file
script_location = "%(here)s/alembic"

# template used to generate migration file names; The default value is %%(rev)s_%%(slug)s
# Uncomment the line below if you want the files to be prepended with date and time
# see https://alembic.sqlalchemy.org/en/latest/tutorial.html#editing-the-ini-file
# for all available tokens
# file_template = "%%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d%%(minute).2d-%%(rev)s_%%(slug)s"

# additional paths to be prepended to sys.path. defaults to the current working directory.
prepend_sys_path = ["."]

[tool.uv.sources]
enacit4r-files = { git = "https://github.com/EPFL-ENAC/enacit4r-files", tag = "1.0.0" }

# timezone to use when rendering the date within the migration file
# as well as the filename.
# If specified, requires the tzdata library which can be installed by adding
# `alembic[tz]` to the pip requirements.
# string value is passed to ZoneInfo()
# leave blank for localtime
# timezone =

# max length of characters to apply to the "slug" field
# truncate_slug_length = 40

# set to 'true' to run the environment during
# the 'revision' command, regardless of autogenerate
# revision_environment = false

# set to 'true' to allow .pyc and .pyo files without
# a source .py file to be detected as revisions in the
# versions/ directory
# sourceless = false

# version location specification; This defaults
# to <script_location>/versions.  When using multiple version
# directories, initial revisions must be specified with --version-path.
# version_locations = [
#    "%(here)s/alembic/versions",
#    "%(here)s/foo/bar"
# ]


# set to 'true' to search source files recursively
# in each "version_locations" directory
# new in Alembic version 1.10
# recursive_version_locations = false

# the output encoding used when revision files
# are written from script.py.mako
# output_encoding = "utf-8"

# This section defines scripts or Python functions that are run
# on newly generated revision scripts.  See the documentation for further
# detail and examples
# [[tool.alembic.post_write_hooks]]
# format using "black" - use the console_scripts runner,
# against the "black" entrypoint
# name = "black"
# type = "console_scripts"
# entrypoint = "black"
# options = "-l 79 REVISION_SCRIPT_FILENAME"
#
# [[tool.alembic.post_write_hooks]]
# lint with attempts to fix using "ruff" - use the module runner, against the "ruff" module
# name = "ruff"
# type = "module"
# module = "ruff"
# options = "check --fix REVISION_SCRIPT_FILENAME"
#
# [[tool.alembic.post_write_hooks]]
# Alternatively, use the exec runner to execute a binary found on your PATH
# name = "ruff"
# type = "exec"
# executable = "ruff"
# options = "check --fix REVISION_SCRIPT_FILENAME"
