[project]
name = "architecture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "brotli>=1.2.0",
    "mkdocs>=1.6.1,<1.7.0",
    "mkdocs-awesome-pages-plugin>=2.9.3",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-git-authors-plugin>=0.10.0",
    "mkdocs-git-revision-date-localized-plugin>=1.5.3",
    "mkdocs-literate-nav>=0.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-with-pdf>=0.9.3",
    "python-frontmatter>=1.2.0",
    # explicit transitive overrides
    "pillow>=12.2.0",
    "urllib3>=2.7.0",
]
